# siue_coax_dev

./: .gitignore
coax_client/: .gitignore  2010-12-10-10:02:44.filtered_state.csv  CMakeLists.txt  coax_server-15ft-1st.bag  coax_server-15ft-4th.bag  coax_server-3x5ft-3rd.bag  coax_server_csv.py  coax_simulator.launch  coax_test.launch  mainpage.dox  manifest.xml  test.launch  tmp.csv
coax_client/bag/: 15ft_1.bag  15ft_2.bag  15ft_3.bag  15ft_4.bag  15ft_5.bag  15ft_6.bag  4x5ft-1.bag  4x5ft-2.bag  4x5ft-3.bag  4x5ft-4.bag  coax_server-15ft-2nd.bag  coax_server-15ft-3rd.bag  coax_server-15ft-5th.bag  coax_server-15ft-6th.bag  coax_server-3x5ft-1st.bag  coax_server-3x5ft-2nd.bag  coax_server-3x5ft-4th.bag  coax_server-3x5ft-5th.bag  coax_server-3x5ft-6th.bag  coax_server-3x5ft-7th.bag  coax_server_4x5ft-1.bag  coax_server_4x5ft-2.bag  coax_server_4x5ft-3.bag  coax_server_4x5ft-4.bag  coax_server_hover_1.bag  coax_server_hover_2.bag  coax_server_hover_3.bag  coax_server_hover_4.bag  coax_server_stationary_1.bag  coax_server_stationary_2.bag  coax_server_stationary_3.bag  coax_server_stationary_4.bag  coax_server_stationary_different_position_1.bag  coax_server_stationary_different_position_2.bag  coax_server_stationary_different_position_3.bag  coax_server_stationary_different_position_4.bag  coax_server_stationary_different_position_on_1.bag  coax_server_stationary_different_position_on_2.bag  coax_server_stationary_different_position_on_3.bag  coax_server_stationary_different_position_on_4.bag  (+24 more)
coax_client/data/: .~lock.coax_server-15ft-1.xls#  .~lock.filtered1-15ft-1.xls#  .~lock.filtered2-15ft-1.xls#  2010-12-13-17:10:01.stationary.csv  coax_filtered-15ft-1.xls  coax_server-15ft-1.xls  coax_server-15ft-5.xls  filtered1-15ft-1.xls  filtered2-15ft-1.xls  filtered_state.csv  tmp.txt
coax_client/include/: 2029_colors.txt  BlobUtilityLibrary.h  CoaxClientConst.h  ethernet_21_4_2011-03-17-13.txt  ethernet_image_0_2011-03-16.txt  ethernet_long_line_2011-03-21.txt  mrl_cloudy_2_sequence_bag_new_colors.txt  mrl_day_colors.txt  mrl_day_down_colors.txt  mrl_day_new_colors.txt  mrl_day_open_door_new_colors.txt  mrl_night_colors.txt  mrl_night_down_colors.txt  mrl_night_new_colors.txt  mrl_stereo_day_colors.txt  mrl_stereo_day_down_colors.txt
coax_client/include/coax_client/: BlobUtilityLibrary.h  CoaxClientConst.h  IDGridCells  IDGridCells.h
coax_client/launch/: bag.launch  bag_recorder.launch  basic.launch  blob_tracking.launch  bwah.launch  camera.launch  camera_test.launch  cmvision.launch  coax_bag.launch  coax_csv.launch  coax_gumstix.launch  coax_simulator.launch  coax_tf.launch  coax_visualizer.launch  coax_xbee.launch  csv.launch  gumstix.launch  gumstix_blob_tracking.launch  gumstix_cam.launch  gumstix_cmvision.launch  gumstix_coax.launch  gumstix_coax_server.launch  gumstix_server_cam.launch  recorder.launch  remote_control.launch
coax_client/msg/: BlobPose.msg  BlobPositions.msg  BlobSequence.msg  BlobSequencePose.msg  BlobSequencePoses.msg  BlobSequencePositions.msg  BlobSequences.msg  CoaxFilteredState.msg  CoaxLocalization.msg  CoaxStateFiltered.msg  FilteredBlobs.msg  IDGridCells  IDGridCells.msg  Keyboard.msg
coax_client/msg/lisp/coax_client/: CoaxStateFiltered.lisp  _package.lisp  _package_CoaxStateFiltered.lisp  coax_client-msg.asd
coax_client/src/: .gitignore  BlobFilterNode.cpp  BlobMapperNode.cpp  BlobPatternFinderNode.cpp  BlobPositionTrackerNode.cpp  BlobSequenceIdentifierNode.cpp  BlobSequencePoseTrackerNode.cpp  CoaxControllerNode.cpp  CoaxDistanceCalc.cpp  CoaxFilteredState.cpp  CoaxFilteredStateNode.cpp  CoaxKeyboardTeleop.cpp  CoaxLocalization.cpp  CoaxLocalizationNode.cpp  CoaxRangeData.cpp  CoaxServerNode.cpp  CoaxServer_tester.cpp  CoaxStateFilterNode.cpp  CoaxVelocityControl.cpp  CoaxVisuals.cpp  TestCoaxAutoflight.cpp  TestCoaxAutoflight.cpp~  TestCoaxIdler.cpp  TestCoaxIdler.cpp~  TestCoaxKeepalive.cpp  TestCoaxSubscriber.cpp  TestCoaxSubscriber.cpp~  coax_csv.py  coax_filter_csv.py  coax_keyboard_teleop  coax_server_csv.py  sequence_identifier.cpp  test_matrix.cpp
coax_client/src/coax_client/msg/: _CoaxStateFiltered.py  __init__.py
coax_client/srv/: BlobPosition.srv  FindBlobPosition.srv
coax_test/: .gitignore  mainpage.dox  manifest.xml
gumstix_cam_node/: .gitignore  CMakeLists.txt  manifest.xml
gumstix_cam_node/include/v4l_cam_node/: libcam.h
gumstix_cam_node/launch/: gumstix_camera.launch
gumstix_cam_node/src/: gumstix_cam_node.cpp  libcam.cpp
include/coax-software/: .gitignore
include/coax-software/PC/simulation_ode/: CMakeLists.txt  M3.cpp  PID.cpp  README.txt  V3.cpp  V3.h
include/coax-software/PC/simulation_ode/.svn/: entries
include/coax-software/PC/simulation_ode/.svn/text-base/: M3.h.svn-base  PID.h.svn-base  coaxsim.cpp.svn-base
include/coax-software/PC/simulation_ode/drawstuff/: JpegCodec.h  config.h  drawstuff.cpp
include/coax-software/PC/simulation_ode/drawstuff/.svn/: entries
include/coax-software/PC/simulation_ode/drawstuff/.svn/text-base/: JpegCodec.cpp.svn-base  x11.cpp.svn-base
include/coax-software/PC/simulation_ode/textures/: ground.ppm  sky.ppm
include/coax-software/PC/simulation_ode/textures/.svn/: entries
include/coax-software/communication/examples/: CMakeLists.txt  coaxlog.cpp  coaxmini.cpp  coaxraw.cpp  coaxtune.cpp  monitor.cpp
include/coax-software/communication/examples/.svn/: entries
include/coax-software/communication/examples/.svn/text-base/: PID.cpp.svn-base  PID.h.svn-base  coax-sysid.cpp.svn-base  coaxbtcfg.cpp.svn-base  coaxcustom.cpp.svn-base  coaxeye.cpp.svn-base  coaxjoy.cpp.svn-base  monitor.cpp.svn-base  rangestat.cpp.svn-base  servo-simple.cpp.svn-base
include/coax-software/communication/examples/commloop/: main_com.c  state.c  state.h
include/coax-software/communication/examples/commloop/.svn/: entries
include/coax-software/communication/examples/commloop/.svn/text-base/: CMakeLists.txt.svn-base  utils.c.svn-base  utils.h.svn-base
ros_coax_dev/: stack.xml
ros_coax_dev/.svn/: entries
ros_coax_dev/coax_3d_controller/: Makefile  mainpage.dox
(+527 files in other folders)
